fix(vcard): fix long words overflow on small screens
fix #7730

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -17,6 +17,8 @@
   outline: none
   text-decoration: none
   transition-property: box-shadow, opacity
+  word-break: break-word
+  overflow-wrap: break-word
   +elevation(2)
 
   > *:first-child:not(.v-btn):not(.v-chip),
